Added passing of simulationDatasetId, more PR feedback